# model-selection-kfp

./: pyproject.toml
configs/: default.yaml
src/model_selection_kfp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model_selection_kfp/cli/: run_local.py
src/model_selection_kfp/utils/: config.py  logging.py  paths.py
