[project]
name = "model-selection-kfp"
version = "0.1.0"
description = "Robustness-Aware Model Selection Pipeline on Kubeflow Pipelines"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.2",
    "numpy==2.0.1",
    "scikit-learn==1.5.1",
    "pyyaml==6.0.2",
    "joblib==1.4.2",
    "kfp==2.8.0"
]

[tool.setuptools.packages.find]
where = ["src"]